--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-pdftotext": "^1.3.4",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
